Fixed build fail errors and remove travis config

--- a/fineract-cn-server-provisioner/build.gradle
+++ b/fineract-cn-server-provisioner/build.gradle
@@ -33,7 +33,6 @@ buildscript {
 plugins {
     id 'com.github.hierynomus.license' version '0.13.1'
     id("org.nosphere.apache.rat") version "0.3.1"
-    id "com.jfrog.artifactory" version "4.9.5"
 }
 
 group 'org.apache.fineract.cn'
@@ -92,21 +91,6 @@ publishing {
 }
 publishToMavenLocal.dependsOn bootRepackage
 
-artifactory {
-    contextUrl = System.getenv("ARTIFACTORY_URL")
-    publish {
-        repository {
-            repoKey = project.findProperty('artifactoryRepoKey')
-            username = System.getenv("ARTIFACTORY_USER")
-            password = System.getenv("ARTIFACTORY_PASSWORD")
-        }
-
-        defaults {
-            publications ('demoPublication')
-        }
-    }
-}
-artifactoryPublish.dependsOn('clean','publishToMavenLocal')
 
 license {
     header rootProject.file('HEADER')
@@ -130,6 +114,7 @@ rat {
             "target/**",
             "gradlew",
             "gradlew.bat",
-            "README.md"
+            "README.md",
+            "**/.dockerignore/**"
     ]
 }
